[gd_scene load_steps=4 format=3 uid="uid://c72vqvvhhr10b"]

[ext_resource type="Script" uid="uid://bdr5umrl2c1im" path="res://ui/menu/start_menu.gd" id="1_kj05y"]
[ext_resource type="Theme" uid="uid://c4875hllppr0h" path="res://ui/theme.tres" id="1_lmq1e"]
[ext_resource type="Script" uid="uid://cnd05qu765nj0" path="res://ui/hud/scrolling_text.gd" id="3_t4xw7"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_lmq1e")
script = ExtResource("1_kj05y")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="Lone" type="RichTextLabel" parent="CenterContainer/Text"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -312.0
offset_right = -197.0
offset_bottom = -191.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "LONE"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
custom_effects = [null]
script = ExtResource("3_t4xw7")
characters_per_second = 4
metadata/_custom_type_script = "uid://cnd05qu765nj0"

[node name="Transmission" type="RichTextLabel" parent="CenterContainer/Text"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.5
offset_top = -193.0
offset_right = 529.5
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "TRANSMISSION"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
custom_effects = [null]
script = ExtResource("3_t4xw7")
characters_per_second = 10
metadata/_custom_type_script = "uid://cnd05qu765nj0"

[node name="Buttons" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = 2.0
offset_right = 195.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "    PLAY    "

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Buttons/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="SettingsButton" type="Button" parent="CenterContainer/Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"
